assets/styles/components/_blocks.scss
/*------------------------------------*\
    $CONTENTS
\*------------------------------------*/
/**
 * CONTENTS............You’re reading it!
 * RESET...............Set our reset defaults
 * FONT-FACE...........Import brand font files
 */


/*------------------------------------*\
    $RESET
\*------------------------------------*/


.block {

	figcaption, .rsCaption {
		@extend .bg-gray-bg;
	}
}


/*------------------------------------*\
    $Text
\*------------------------------------*/

.__text {

	@include gs-media (t,min-max) {
		@include gs-span(t, all);
	}
	@include gs-media (d) {
		@include gs-span(d, 5,12, (5, 16));
	}

	.l-content & {
		@include gs-media (d) {
			@include gs-span(d, 5,12, (5, 12));
		}
	}
}

.leader {
	font-size: remCalc(22);
	font-size: 22px;
	@include adjust-leading-to(5, 22px); 	
	padding-bottom: rhythm(3, 22px);
}

/*------------------------------------*\
    $Media
\*------------------------------------*/


.__media {

	li h3, li p {
		width: 100%;
	}

	&.__with-aside { 
	/**
	* Images with aside will run from d5 to d12 
	*/
		.l-content{
			@include gs-media (t,min-max) {
				@include gs-span(t, all);
			}
			@include gs-media (d) {
				@include gs-span(d, 5,12, (5, 16));
			}
		}
		.__text {
			@include gs-media (d) {
				@include gs-span(d, 5,12, (5, 13));
			}
		}
	}

	&.__highlight {
		background: $bg-gray;
		&:hover {
			filter: grayscale(100%);
			-webkit-filter: grayscale(100%);
			-moz-filter: grayscale(100%);
			-ms-filter: grayscale(100%);
			-o-filter: grayscale(100%);
			-webkit-transition: all ease 0.2s;
			-moz-transition: all ease 0.2s;
			-o-transition: all ease 0.2s;
			transition: all ease 0.2s;
			background: $black;
			h2, h3 {
				color: $white;
			}
		}
	}

	.event { // used on the media blocks 6x6
		background: $soft-black;
		color: $white;
		padding: 24px;
		margin-bottom: 24px;
	}

	.course { // used on the media blocks 6x6
		background: $bg-gray;
		padding: 24px;
		margin-bottom: 24px;
	}

}


/*------------------------------------*\
    $Page Block Classes
\*------------------------------------*/

// two-up - core styles
// 
.two-up {
	@include gs-media(t,min-max) {
		@extend %t2-t7;
			li {
				@include gs-span(t, 2, 4, (2, 7));
			}
			li:nth-child(2n) {
				@include gs-span(t, 5, 7, (2, 7));
			}
		}

	&.l-content {
		@extend %d5-d12--within-d5-d16;
		@include gs-media(d) {
			li {
				@include gs-span(d, 5, 8, (5, 12));
			}
			li:nth-child(2n) {
				@include gs-span(d, 9, 12, (5, 12));
			}
		}
	}

	&.l-content-full-width {
		@extend %d5-d16--within-d5-d16;
		@include gs-media(d) {
			li {
				@include gs-span(d, 5, 10, (5, 16));
			}
			li:nth-child(2n) {
				@include gs-span(d, 11, 16, (5, 16));
			}
		}
	}

	&.l-content-half-width {
		@extend %d5-d16--within-d5-d16;
		@include gs-media(d) {
			ul {
				@include gs-span(d, 5, 10, (5, 16));
			}
			ul:nth-child(2n) {
				@include gs-span(d, 11, 16, (5, 16));
			}
		}
	}

	.lcf & {
		text-align: center;
	}
}

// three-up - core styles
// 
.three-up {
	@include gs-media(t,min-max) {
		@extend %t2-t7;
			li {
				@include gs-span(t, 2, 3, (2, 7));
			}
			li:nth-child(2n) {
				@include gs-span(t, 4, 5, (2, 7));
			}
			li:nth-child(3n) {
				@include gs-span(t, 6, 7, (2, 7));
			}
		}

	&.l-content-full-width {
		@extend %d5-d16--within-d5-d16;
		@include gs-media(d) {
			li {
				@include gs-span(d, 5, 8, (5, 16));
			}
			li:nth-child(2n) {
				@include gs-span(d, 9, 12, (5, 16));
			}
			li:nth-child(3n) {
				@include gs-span(d, 13, 16, (5, 16));
			}
		}
	}

	&.__gallery {
		ul  {
			clear:left;
		}
	}

}

// four-up - core styles
// 
.four-up {
	@include gs-media(t,min-max) {
		@extend %t2-t7;
			li {
				@include gs-span(t, 2, 4, (2, 7));
			}
			li:nth-child(2n) {
				@include gs-span(t, 5, 7, (2, 7));
			}
			li:nth-child(3n) {
				@include gs-span(t, 2, 4, (2, 7));
				clear: left;
			}
			li:nth-child(4n) {
				@include gs-span(t, 5, 7, (2, 7));
			}
		}

	&.l-content-full-width {
		@include gs-media(d) {
			@extend %d-all;
			li {
				@include gs-span(d, 1, 4);
			}
			li:nth-child(2n) {
				@include gs-span(d, 5, 8);
			}
			li:nth-child(3n) {
				@include gs-span(d, 9, 12);
			}
			li:nth-child(4n) {
				@include gs-span(d, 13, 16);
			}
		}
	}

	&.__gallery {
		ul  {
			clear:left;
		}

		
	}

}

